# My_rust_learning

./: README.md
assignment1/: Cargo.toml
cli_app/: output.txt
cli_app/src/: lib.rs  main.rs
collection/src/: main.rs
error_handling/src/: main.rs
functions/: functions1.rs  solution3.rs
generics/src/: main.rs
handbook/closures/src/: main.rs
handbook/collection/src/: main.rs
handbook/enum_learning/: Cargo.toml
handbook/enum_learning/src/: main.rs
handbook/guessing_game/src/: main.rs
handbook/module_system/src/: main.rs
handbook/restaurant/src/: lib.rs
handbook/struct_learning/src/: main.rs
handbook/test2/src/: lib.rs
handbook/tests/src/: lib.rs
handbook/tests/tests/: integeration_testing.rs
lifetime/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
practice/src/: buy_sell_stock.rs  contains_duplicate.rs  longest_common_prefix.rs  main.rs  max_product.rs  max_sum_array.rs  minimum_sorted_rotated.rs  palindrome.rs  product_of_array.rs  reverse_integer.rs  roman_to_integer.rs  search_in_rotated_sorted.rs  two_sum.rs
rustlingSolutions/functions/: solution1.rs  solution5
rustlingSolutions/if/: solution3.rs
rustlingSolutions/primitive_types/: solution1.rs  solution2.rs  solution3.rs  solution4.rs  solution6.rs
rustlingSolutions/variables/: solution1.rs  solution2.rs  solution3.rs  solution5.rs
rustlingSolutions/vecs/: solution1.rs  solution2.rs
tests/src/: main.rs
traits/src/: main.rs
